[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-gusantong"
version = "0.0.5"
description = "获取市场实时财经新闻的工具"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "build>=1.2.2.post1",
    "mcp[cli]>=1.12.0",
    "requests>=2.32.4",
    "twine>=6.1.0"
]

[project.scripts]
mcp-server-gusantong = "mcp_server_gusantong:main"

[tool.setuptools]
package-dir = {"" = "src"}
